# automl-engine

./: .gitignore  LICENSE  README.ja.md  README.md  build_docs.bat  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: conf.py  index.md
notebook/: regression.ipynb
src/automl_engine/: __init__.py
src/automl_engine/common/: __init__.py
src/automl_engine/common/constants/: algorithms.py  metrics.py
src/automl_engine/common/schema/: regression.py
src/automl_engine/ml/: __init__.py
src/automl_engine/ml/automl/: __init__.py  supervised.py  template.py
src/automl_engine/ml/deploy/: __init__.py
src/automl_engine/ml/evaluation/: __init__.py
src/automl_engine/ml/explainability/: __init__.py
src/automl_engine/ml/interpretation/: __init__.py
src/automl_engine/ml/prediction/: __init__.py
src/automl_engine/ml/preprocessing/: __init__.py
src/automl_engine/ml/training/: __init__.py  supervised.py
tests/: test_import.py  test_regression_analyzer_prepare.py
