[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-engine"
version = "0.1.0"
description = "AutoML engine for integration into AI applications"
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }

# 依存ゼロ or 最小に保つ
dependencies = []

[project.optional-dependencies]

# ----------------------
# 本番利用
# ----------------------
main = [
]

# ----------------------
# 開発・CI・Docs
# ----------------------
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-setuptools",

  "sphinx>=8.0,<9",
  "myst-parser>=4.0,<5",
  "furo>=2024.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
]

# ----------------------
# Tool configurations
# ----------------------

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
