[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-engine"
version = "0.1.0"
description = "AutoML engine for integration into AI applications"
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "takafumi nishiwaki" }]

# 依存ゼロ or 最小に保つ
dependencies = []

[project.optional-dependencies]

# ----------------------
# 本番利用
# ----------------------
main = [
  "scikit-learn>=1.4.2,<2",
  "pandas>=2.2.1,<3",
  "numpy>=1.26.4,<2",
  "xgboost>=1.7.6,<2",
  "lightgbm>=4.4.0,<5",
  "catboost>=1.2,<2",
  "joblib>=1.3.2,<2",
  "optuna>=3.6,<5",
  "pydantic>=2.8.0,<3",
]

# ----------------------
# 開発・CI・Docs
# ----------------------
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-setuptools",

  "sphinx>=8.0,<9",
  "sphinx-rtd-theme>=1.2",
  "myst-parser>=4.0,<5",
  "furo>=2024.0.0",
  "sphinx-autodoc-typehints>=2.0.0",
]

# ----------------------
# Tool configurations
# ----------------------

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "optuna"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]