[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-engine"
version = "0.1.0"
description = "AutoML engine for integration into AI applications"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "takafumi nishiwaki" }]
keywords = ["automl", "machine-learning", "scikit-learn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# 依存ゼロ運用は良い方針。最小コアのみ必要になったらここに追加。
dependencies = []

[project.optional-dependencies]

# ----------------------
# 本番利用
# ----------------------
main = [
  "scikit-learn>=1.4.2,<2",
  "numpy>=1.26.4,<2",
  "pandas>=2.2.1,<3",
  "joblib>=1.3.2,<2",

  "xgboost>=1.7.6,<2",
  "lightgbm>=4.4.0,<5",
  "catboost>=1.2,<2",

  "optuna>=3.6,<5",
  "pydantic>=2.8,<3",
]

# ----------------------
# 開発・CI・Docs
# ----------------------
dev = [
  # test
  "pytest>=8,<9",
  "pytest-cov>=4,<6",

  # lint/format/type
  "ruff>=0.6",
  "mypy>=1.11",
  "types-setuptools",
  "pandas-stubs",

  # docs
  "sphinx>=8,<9",
  "myst-parser>=4,<5",
  "furo>=2024.0.0",
  "sphinx-autodoc-typehints>=2,<3",
]

# まとめて入れたい用（CI やローカル開発で便利）
all = ["automl-engine[main,dev]"]

# ----------------------
# Tool configurations
# ----------------------

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

# 必要に応じて追加
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "dist",
  "build",
  "docs/_build",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# 将来、docstringも厳密にするならここに "D" を追加して運用するのが良いです。
# ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_context = true
show_column_numbers = true

# 厳密運用（必要に応じて段階導入）
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

# あとで段階的に締めるときに使うと良い
# disallow_any_generics = true
# disallow_subclassing_any = true
# strict_equality = true

[[tool.mypy.overrides]]
module = [
  "requests.*",
  "psutil",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "optuna",
  "xgboost.*",
  "lightgbm.*",
  "catboost.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
